# ComfyUI-ResolutionPresets

./: README.md  __init__.py  pyproject.toml  resolution_presets.py
.github/workflows/: publish.yml
docs/: requirements.md
